added user-microservice and added outbox pattern